--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "pa-api",
+  "name": "brumaire-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "./node_modules/.bin/rimraf dist",
-    "build": "./node_modules/.bin/nest build",
-    "format": "./node_modules/.bin/prettier --write 'src/**/*.ts' 'test/**/*.ts'",
-    "start": "./node_modules/.bin/nest start",
-    "start:dev": "./node_modules/.bin/nest start --watch",
-    "start:debug": "./node_modules/.bin/nest start --debug --watch",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "./node_modules/.bin/eslint  --fix 'src/**/*.ts'",
-    "test": "./node_modules/.bin/jest",
-    "test:watch": "./node_modules/.bin/jest --watch",
-    "test:cov": "./node_modules/.bin/jest --coverage",
+    "lint": "eslint  --fix 'src/**/*.ts'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register .node_modules/.bin/jest --runInBand",
-    "test:e2e": "./node_modules/.bin/jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
