--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@nestjs/axios": "0.0.7",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
@@ -29,6 +30,7 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
+    "@types/axios": "^0.14.0",
     "aws-sdk": "^2.1090.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.3.1",
