--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc --project ./tsconfig.build.json",
     "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
-    "start": "node ./dist/main.js",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
